// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfflineMessage does not render diagnostics when diagnostics is not string or object 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#104e01",
      "borderColor": "#fff59b",
      "borderRadius": 11.25,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "top": "10%",
      "zIndex": 2,
    }
  }
  testID="offlineMessage"
>
  <Text
    maxFontSizeMultiplier={2.5}
    style={
      {
        "color": "#fff59b",
        "fontSize": 30.595932917809698,
        "paddingHorizontal": 15,
        "paddingVertical": 13.34,
        "textAlign": "center",
      }
    }
  >
    Network error occurred
  </Text>
</View>
`;

exports[`OfflineMessage does not render diagnostics when diagnostics is null 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#104e01",
      "borderColor": "#fff59b",
      "borderRadius": 11.25,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "top": "10%",
      "zIndex": 2,
    }
  }
  testID="offlineMessage"
>
  <Text
    maxFontSizeMultiplier={2.5}
    style={
      {
        "color": "#fff59b",
        "fontSize": 30.595932917809698,
        "paddingHorizontal": 15,
        "paddingVertical": 13.34,
        "textAlign": "center",
      }
    }
  >
    Network error occurred
  </Text>
</View>
`;

exports[`OfflineMessage handles different topOffset values 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#104e01",
      "borderColor": "#fff59b",
      "borderRadius": 11.25,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "top": "50%",
      "zIndex": 2,
    }
  }
  testID="offlineMessage"
>
  <Text
    maxFontSizeMultiplier={2.5}
    style={
      {
        "color": "#fff59b",
        "fontSize": 30.595932917809698,
        "paddingHorizontal": 15,
        "paddingVertical": 13.34,
        "textAlign": "center",
      }
    }
  >
    Test message
  </Text>
</View>
`;

exports[`OfflineMessage handles empty message gracefully 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#104e01",
      "borderColor": "#fff59b",
      "borderRadius": 11.25,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "top": "10%",
      "zIndex": 2,
    }
  }
  testID="offlineMessage"
>
  <Text
    maxFontSizeMultiplier={2.5}
    style={
      {
        "color": "#fff59b",
        "fontSize": 30.595932917809698,
        "paddingHorizontal": 15,
        "paddingVertical": 13.34,
        "textAlign": "center",
      }
    }
  />
</View>
`;

exports[`OfflineMessage renders with an action button 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#104e01",
      "borderColor": "#fff59b",
      "borderRadius": 11.25,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "top": "10%",
      "zIndex": 2,
    }
  }
  testID="offlineMessage"
>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-evenly",
        "opacity": 1,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={2.5}
      style={
        {
          "color": "#fff59b",
          "fontSize": 30.595932917809698,
          "paddingHorizontal": 15,
          "paddingVertical": 13.34,
          "textAlign": "center",
        }
      }
    >
      Sorry, you can't do that right now, you appear to be offline
    </Text>
    <Icon
      name="forwardburger"
      size={66.7}
      style={
        {
          "color": "#fff59b",
          "marginRight": 15,
        }
      }
    />
  </View>
</View>
`;

exports[`OfflineMessage renders with diagnostics when diagnostics is a string 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#104e01",
      "borderColor": "#fff59b",
      "borderRadius": 11.25,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "top": "10%",
      "zIndex": 2,
    }
  }
  testID="offlineMessage"
>
  <Text
    maxFontSizeMultiplier={2.5}
    style={
      {
        "color": "#fff59b",
        "fontSize": 30.595932917809698,
        "paddingHorizontal": 15,
        "paddingVertical": 13.34,
        "textAlign": "center",
      }
    }
  >
    Network error occurred
  </Text>
  <Text
    style={
      {
        "color": "#fff59b",
        "fontSize": 30.595932917809698,
        "paddingHorizontal": 15,
        "paddingVertical": 13.34,
        "textAlign": "center",
      }
    }
  >
    "Connection timeout"
  </Text>
</View>
`;

exports[`OfflineMessage renders with diagnostics when diagnostics is an object 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#104e01",
      "borderColor": "#fff59b",
      "borderRadius": 11.25,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "top": "10%",
      "zIndex": 2,
    }
  }
  testID="offlineMessage"
>
  <Text
    maxFontSizeMultiplier={2.5}
    style={
      {
        "color": "#fff59b",
        "fontSize": 30.595932917809698,
        "paddingHorizontal": 15,
        "paddingVertical": 13.34,
        "textAlign": "center",
      }
    }
  >
    Network error occurred
  </Text>
  <Text
    style={
      {
        "color": "#fff59b",
        "fontSize": 30.595932917809698,
        "paddingHorizontal": 15,
        "paddingVertical": 13.34,
        "textAlign": "center",
      }
    }
  >
    {}
  </Text>
</View>
`;

exports[`OfflineMessage renders without an action button 1`] = `
<View
  collapsable={false}
  style={
    {
      "alignItems": "center",
      "alignSelf": "center",
      "backgroundColor": "#104e01",
      "borderColor": "#fff59b",
      "borderRadius": 11.25,
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 0,
      "position": "absolute",
      "top": "10%",
      "zIndex": 2,
    }
  }
  testID="offlineMessage"
>
  <Text
    maxFontSizeMultiplier={2.5}
    style={
      {
        "color": "#fff59b",
        "fontSize": 30.595932917809698,
        "paddingHorizontal": 15,
        "paddingVertical": 13.34,
        "textAlign": "center",
      }
    }
  >
    Sorry, you can't do that right now, you appear to be offline
  </Text>
</View>
`;
